added a bunch more posts

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -11,4 +11,5 @@
 <div style="text-align: center;">
   Online onderwijs voor kinderen op de basisschool met talent voor leren.
   Hier bloggen wij over hoogbegaafdheid, onderwijs, en veranderingen aan de website.
+  De Digitale Topschool vind je op <a href="https://www.dedigitaletopschool.nl/" target="_blank">www.dedigitaletopschool.nl</a>.
 </div>
