localize more strings

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -10,6 +10,6 @@
 
 <div style="text-align: center;">
   Online onderwijs voor kinderen op de basisschool met talent voor leren.
-  Hier bloggen wij over hoogbegaafdheid, onderwijs, en veranderingen aan de website.
+  Hier bloggen wij over onze opdrachten, hoogbegaafdheid, en onderwijs.
   De Digitale Topschool vind je op <a class="base0c" href="https://www.dedigitaletopschool.nl/" target="_blank">www.dedigitaletopschool.nl</a>.
 </div>
