add meekijken post

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,1 +1,47 @@
 article img { max-width: 100% }
+
+.invisible { display: none; }
+
+.btn {
+    position: relative;
+    background-color: #F2D360;
+    border: none;
+    color: #FFFFFF;
+    padding: 10px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+}
+.btn:hover{
+  border-left : 5px groove #50D2F2;
+}
+
+.btn:after {
+    content: "";
+    background: #f1f1f1;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px !important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+.btn:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
+.btn-large {font-size:16pt;}
+.btn-larger {font-size:24pt;}
+.green {background-color:#8AD95F;}
+.blue{background-color:#03318C;}
+.red{background-color:#F22E3E;}
+.light-blue{background-color:#0F9BF2;}
+.orange{background-color:#F25632;}
