--- a/layouts/partials/article-list-item.html
+++ b/layouts/partials/article-list-item.html
@@ -4,7 +4,7 @@
   <div class="meta">
 {{ if eq $dateMissing false }}
     <span class="key">gepubliceerd op</span>
-    <span class="val"><time itemprop="datePublished" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2 january 2006" }}</time></span>
+    <span class="val"><time itemprop="datePublished" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "Mon Jan 02, 2006" }}</time></span>
 {{ end }}
   </div>
   <section class="summary">
